--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,12 @@ a {
 #invisible{
   display: none;
 }
+#bookmark-item {
+  //border-style: solid;
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: rgb(51,51,51);
+  padding: 5px;
+  margin-bottom: 5px;
+  background-color: rgb(238,238,238);
+}
