--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,3 +29,28 @@ a {
   height: 22px;
   margin-right: 10px;
 }
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}
+@media screen and (max-width : 768px) {
+  .container {
+    margin-top: 150px;
+  }
+}
+@media screen and (min-width : 769px) {
+  .container {
+    margin-top: 100px;
+  }
+}
