--- a/views/index.jade
+++ b/views/index.jade
@@ -1,17 +1,20 @@
 extends layout
 
 block content
-  .jumbotron
-    .page-header
-      h1 Your bookmarks
-      button.btn.btn-link
-        a(href='/bookmarks/') list
-      button.btn.btn-link
-        a(href='/bookmarks/add') add
-      button.btn.btn-link
-        a(href='#') delete
-
-
+  nav.navbar.navbar-inverse.navbar-fixed-top
+    .container-fluid
+      .navbar-header
+        a.navbar-brand(href='#') Your bookmarks
+      ul.nav.navbar-nav
+        li.active
+          a(href='#') all
+        li
+          a(href='/bookmarks/add') add
+        li
+          a(href='#') delete
+        li
+          a(href='#') Page 3
+          
   .container
     ul.list-unstyled
       for bookmark in bookmarks
