--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,12 +21,15 @@ a {
   padding: 5px;
   margin-bottom: 5px;
   background-color: rgb(238,238,238);
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 #edit-glyphicon, #bookmark-favicon {
   float: right;
 }
 #bookmark-favicon {
-  height: 22px;
+  height: 20px;
   margin-right: 10px;
 }
 .navbar-collapse.collapse {
