--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,9 @@ a {
 #invisible{
   display: none;
 }
+.m-spacing {
+  letter-spacing: 5px;
+}
 .bookmark-item {
   //border-style: solid;
   border-width: 1px;
