--- a/views/bookmark-id.jade
+++ b/views/bookmark-id.jade
@@ -4,16 +4,16 @@ block content
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container-fluid
       .navbar-header
-        a.navbar-brand(href='#') Your bookmarks
+        a.navbar-brand.m-spacing(href='/bookmark') BOOKMARKS
       ul.nav.navbar-nav
-        li.active
-          a(href='/bookmarks') all
         li
-          a(href='/bookmarks/add') add
+          a(href='/bookmarks') ALL
         li
-          a(href='#') delete
+          a(href='/bookmarks/add') ADD
         li
-          a(href='#') tags
+          a(href='#')#delete-btn DELETE
+        li
+          a(href='#') TAGS
 
   .container
     ul.list-unstyled
