--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,6 +27,8 @@ a {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
+  height: 145px;
+  overflow: scroll;
 }
 #edit-glyphicon, #bookmark-favicon {
   float: right;
