add endpoints in views

--- a/views/bookmark.jade
+++ b/views/bookmark.jade
@@ -4,7 +4,7 @@ block content
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container-fluid
       .navbar-header
-        a.navbar-brand.m-spacing(href='/bookmark') BOOKMARKS
+        a.navbar-brand.m-spacing(href='/bookmarks') BOOKMARKS
       ul.nav.navbar-nav
         li.active
           a(href='/bookmarks') ALL
@@ -12,6 +12,8 @@ block content
           a(href='/bookmarks/add') ADD
         li
           a(href='#')#delete-btn DELETE
+        li
+          a(href='#')#edit-btn EDIT
         li
           a(href='#') TAGS  .container
     p You are adding #{url}
