--- a/views/index.jade
+++ b/views/index.jade
@@ -13,6 +13,8 @@ block content
         li
           a(href='#')#delete-btn DELETE
         li
+          a(href='#')#edit-btn EDIT
+        li
           a(href='#') TAGS
 
   .container
