--- a/views/bookmark.jade
+++ b/views/bookmark.jade
@@ -4,7 +4,7 @@ block content
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container-fluid
       .navbar-header
-        a.navbar-brand.m-spacing(href='/bookmarks') BOOKMARKS
+        a.navbar-brand.m-spacing(href='/bookmark') BOOKMARKS
       ul.nav.navbar-nav
         li.active
           a(href='/bookmarks') ALL
@@ -15,7 +15,8 @@ block content
         li
           a(href='#')#edit-btn EDIT
         li
-          a(href='#') TAGS  .container
+          a(href='#') TAGS
+  .container
     p You are adding #{url}
     p#invisible #{url}
     form
