--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,6 +57,9 @@ a {
   .container {
     margin-top: 150px;
   }
+  .bookmark-item {
+    height: auto;
+  }
 }
 @media screen and (min-width : 769px) {
   .container {
