remove error-stack from error-view

--- a/views/error.jade
+++ b/views/error.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+  h1 Sorry!
+  h2 Your request could not be processed
+#  h2= message
+#  h3= error.status
+#  pre #{error.stack}
