--- a/views/bookmark.jade
+++ b/views/bookmark.jade
@@ -4,7 +4,7 @@ block content
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container-fluid
       .navbar-header
-        a.navbar-brand.m-spacing(href='/bookmark') BOOKMARKS
+        a.navbar-brand.m-spacing(href='/bookmarks') BOOKMARKS
       ul.nav.navbar-nav
         li.active
           a(href='/bookmarks') ALL
