--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,10 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-tagsinput/bootstrap-tagsinput.css')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script(src='/javascripts/helpers.js')
+    script(src='/javascripts/bootstrap-tagsinput/bootstrap-tagsinput.js')
   body
     block content
