add labels for tags to index view

--- a/public/stylesheets/bootstrap-tagsinput/bootstrap-tagsinput.css
+++ b/public/stylesheets/bootstrap-tagsinput/bootstrap-tagsinput.css
@@ -20,6 +20,7 @@
   margin: 0;
   width: auto;
   max-width: inherit;
+  min-width: 60px;
 }
 .bootstrap-tagsinput.form-control input::-moz-placeholder {
   color: #777;
