--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,7 @@ a {
   overflow: auto;
   overflow-x: hidden;
 }
+
 #brand-icon-container {
   height: 40px;
   overflow: hidden;
@@ -81,4 +82,18 @@ a {
   .container {
     margin-top: 100px;
   }
+}
+.new-tab-label{
+  transform: rotate(45deg);
+}
+.bookmark-newtab-btn {
+  display: none;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  border-radius: 50%;
+  background: white;
+  border: none;
+  width: 25px;
+  height: 25px;
 }
