--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ a {
 }
 
 #brand-icon-container {
-  height: 40px;
+  height: 50px;
   overflow: hidden;
 }
 #brand-icon {
@@ -92,6 +92,9 @@ a {
   bottom: 10px;
   right: 20px;
   border-radius: 50%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(51,51,51);
   background: white;
   border: none;
   width: 25px;
