--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,7 +44,9 @@ a {
 }
 #bookmark-favicon {
   height: 20px;
-  margin-right: 10px;
+  position: absolute;
+  top: 10px;
+  right: 20px;
 }
 .navbar-collapse.collapse {
   display: block!important;
