change color theme

--- a/views/bookmark-id.jade
+++ b/views/bookmark-id.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  nav.navbar.navbar-inverse.navbar-fixed-top
+  nav.navbar.navbar-fixed-top
     .container-fluid
       .navbar-header
         a.navbar-brand.m-spacing(href='/bookmarks') BOOKMARKS
