--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,7 +31,7 @@ a {
 }
 
 #brand-icon-container {
-  height: 50px;
+  height: 45px;
   overflow: hidden;
 }
 #brand-icon {
@@ -55,6 +55,9 @@ a {
 .navbar-nav>li, .navbar-nav {
   float: left !important;
 }
+.navbar-default .navbar-nav>li>a {
+  color: white;
+}
 
 .navbar-nav.navbar-right:last-child {
   margin-right: -15px !important;
@@ -62,9 +65,6 @@ a {
 
 .navbar-right {
   float: right!important;
-}
-.bootstrap-tagsinput .label-info{
-  background-color: rgb(31,31,31);
 }
 .tag-labels-container .label{
   margin-right: 2px;
@@ -101,4 +101,7 @@ a {
   border: none;
   width: 25px;
   height: 25px;
+}
+.navbar-custom, .label-primary {
+  background-color:rgb(65,184,131);
 }
