--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,11 @@
 extends layout
 
 block content
-  nav.navbar.navbar-inverse.navbar-fixed-top
+  nav.navbar.navbar-default.navbar-fixed-top.navbar-custom
     .container-fluid.tag-navbar
       .navbar-header
       ul.nav.navbar-nav
-        li.active#brand-icon-container
+        li#brand-icon-container
           a(href='/bookmarks')
             img#brand-icon.brand-active(src='/images/inclined-puspin-32-active.png')
         li
