--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    meta(name='theme-color', content='#41b883')
+    meta(name='msapplication-navbutton-color', content='#41b883')
+    meta(name='apple-mobile-web-app-status-bar-style', content='#41b883')
+
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-tagsinput/bootstrap-tagsinput.css')
