Adapt views to authentication

--- a/views/error.jade
+++ b/views/error.jade
@@ -3,6 +3,6 @@ extends layout
 block content
   h1 Sorry!
   h2 Your request could not be processed
-  #  h2= message
-  #  h3= error.status
-  #  pre #{error.stack}
+  h2= message
+  h3= error.status
+  pre #{error.stack}
