--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,9 @@ block content
     .container-fluid
       .navbar-header
         button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
+          span.icon-bar.collapse-icon-white
+          span.icon-bar.collapse-icon-white
+          span.icon-bar.collapse-icon-white
         a(href='/bookmarks').navbar-brand
           img#brand-icon.brand-active(src='/images/inclined-puspin-32-active.png')
       .collapse.navbar-collapse#mainnav
@@ -16,9 +16,9 @@ block content
             a(href='/bookmarks/add') ADD
           li
             a(href='#')#delete-btn DELETE
-        form.navbar-form.navbar-left
-          .form-group
-            input(type='text', placeholder='Search by title').form-control#title-search-bar
+
+        .form-group
+          input(type='text', placeholder='Search by title').form-control#title-search-bar
         ul.nav.navbar-nav.navbar-right.tag-navbar
 
   .container
