Change styling of search input.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,6 +59,9 @@ a {
 .collapse-icon-white {
   background-color: white!important;
 }
+.tag-search-wrapper {
+  border: none;
+}
 /*
 .navbar-nav.navbar-right:last-child {
   margin-right: -15px !important;
