--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-tagsinput/bootstrap-tagsinput.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='manifest', href='/javascripts/manifest.json') 
 
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
